--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 Justin Bell's GitHub website.
+body {
+    color: #222;
+}
+.g, body, html, input, .std, h1 {
+    font-family: arial,sans-serif;
+    font-size: 14px;
+}
+body {
+    background: #fff;
+    color: #000;
+    margin: 0;
+}
+user agent stylesheet
+html {
+    color: -internal-root-color;
+}
