--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 Justin Bell's GitHub website.
 body {
+    <header>
+        <h1> juts goods</h1>
     color: #222;
 }
 .g, body, html, input, .std, h1 {
@@ -15,3 +17,5 @@ user agent stylesheet
 html {
     color: -internal-root-color;
 }
+        </body>
+`       </html>
