--- a/index.html
+++ b/index.html
@@ -33,10 +33,17 @@
         <h2 id="first-post">what is the best Bats for a Baseball player!</h2>
         <h6>Easton ghost starting at $300. Mlb players love this bat and will last a while.</h6>
         
-        <p>Today we'll be looking into which batse will give you the best edge over everyone.</p>
+        <p> Easton is the world's leading manufacturer of baseball and softball equipment, and the most iconic brand in these sports
+            .Headquartered in Thousand Oaks, CA, Easton Diamond Sports, LLC. manufactures bats, ball gloves, apparel, bags, batting gloves, helmets, catcher's equipment and related accessories.
+                The company's commitment to innovation and game-changing technologies propelled Easton to the No. 1 bat position, including breakthrough technologies with aluminum and composite materials. As a result of this commitment to R&D and its storied brand heritage, Easton has long-standing relationships with Little League Baseball, USSSA Baseball & Softball, USA Baseball & Softball, hundreds of NCAA collegiate teams and numerous professional baseball and softball players.</p>
        <h2 id="second-post">Can it be worse?</h2>
         <h6>A Grifter bat is the worst bat in my opinion. You can swing as hard as you can and it wil barley get out of the infield so this bat is not the one to get.</h6>
         
-        <p>The easton company makes the best bat.you can get one for only 300 and it will last you your whole highschool season</strong></p>
+        <p>The Combat Grifter may have been the easiest choice for this worst bats ever list. As if the name Grifter wasn’t enough evidence the bat was a sham, you can still find these bats for sale all over the place, new in wrapper. Maybe the word Grifter means something akin to awesome in Canada (where Combat was produced before going defunct)?
+
+The Grifter served as a replacement bat for many full composite bats—including the very famous Combat DaBomb B2—that were banned in 2013 for Little League play. That bat exchange was more egregious than the Hornets trading Vlade Divac for Kobe Bryant. It was exchanging power for a hand-ringing black hole of a bat that did nothing but break.
+
+We made the awesome mistake of purchasing this bat as one of our very first forays into the youth performance bat space. Depending on the diameter, the bat used anywhere from a drop 9 to drop 11. In reality, the bat often weighed more like a drop 6. Ours broke on the handle. Twice. It stands as the worst bat ever among both players and distributors.
+                </strong></p>
     </body>
 </html>
