--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
         <h3>Contents</h3>
         <ul>
-            <li><a href=" sporting goods !</a></li>
-            <li><a href="#second-post">which bat is the best for the bang!</a></li>
+            <li><a href=" sportinggoods!.html</a></li>
+            <li><a href="#second-post">whichbatandgloveisthebestforthesportsofbaseball.html</a></li>
         </ul>
         
         <h2 id="first-post">what is the best Bats for a Baseball player!</h2>
