--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h3>Contents</h3>
         <ul>
             <li><a href=" sportinggoods!.html</a></li>
-            <li><a href="#second-post">whichbatandgloveisthebestforthesportsofbaseball.html</a></li>
+            <li><a href="#second-post">which bat and glove is the best for the sports of baseball.html</a></li>
         </ul>
         
         <h2 id="first-post">what is the best Bats for a Baseball player!</h2>
@@ -45,5 +45,6 @@ The Grifter served as a replacement bat for many full composite bats—including
 
 We made the awesome mistake of purchasing this bat as one of our very first forays into the youth performance bat space. Depending on the diameter, the bat used anywhere from a drop 9 to drop 11. In reality, the bat often weighed more like a drop 6. Ours broke on the handle. Twice. It stands as the worst bat ever among both players and distributors.
                 </strong></p>
+                <p>Next
     </body>
 </html>
