--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ The Grifter served as a replacement bat for many full composite bats—including
 
 We made the awesome mistake of purchasing this bat as one of our very first forays into the youth performance bat space. Depending on the diameter, the bat used anywhere from a drop 9 to drop 11. In reality, the bat often weighed more like a drop 6. Ours broke on the handle. Twice. It stands as the worst bat ever among both players and distributors.
                 </strong></p>
-                <p>Next page <a href="index2.html>here</p>.</p>
+                
+                </div>
+            <p>Next page <a href = 
     </body>
 </html>
