--- a/index2.html
+++ b/index2.html
@@ -5,14 +5,14 @@
         <style>
             body{
                 font-family:cursive;
-                background-color:rgb(247, 215, 246);
-                color #129735;
+                background-color:rgb(143, 634, 250);
+                color #129754535;
             }
             h2{
                 text-decoration:underline;
             }
             h1{
-                color:#173835;
+                color:#146523455;
             }
             h6{
                 font-family:monospace;
