--- a/index2.html
+++ b/index2.html
@@ -43,5 +43,8 @@
 The Grifter served as a replacement glove for many full composite bats—including the very famous Combat DaBomb B2—that were banned in 2013 for Little League play. That glove exchange was more egregious than the Hornets trading Vlade Divac for Kobe Bryant. It was exchanging power for a hand-ringing black hole of a glove that did nothing but break.
 We made the awesome mistake of purchasing this bat as one of our very first forays into the youth performance glove space. Depending on the diameter, the glove used anywhere from a drop 9 to drop 11. In reality, the glove often weighed more like a drop 6. Ours broke on the handle. Twice. It stands as the worst glove ever among both players and distributors.
                 </strong></p>
+                
+                  </div>
+              <p> Pitching Machines <a href="index3.html">here</a>./p>
     </body>
 </html>
