--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
         <h3>Contents</h3>
         <ul>
             <li><a href=" sporting goods !</a></li>
-            <li><a href="#second-post">which glove is the best for the catch!</a></li>
+            <li>which glove is the best for the catch!</li>
         </ul>
         
         <h2 id="first-post">what is the best glove for a Baseball player!</h2>
