--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
         <h3>Contents</h3>
         <ul>
-            <li><a href=" sportinggoods!.html</a></li>
-            <li><a href="#second-post">which bat and glove is the best for the sports of baseball.html</a></li>
+            <li>which bat and glove is the best for the sports of baseball.html</li>
         </ul>
         
         <h2 id="first-post">what is the best Bats for a Baseball player!</h2>
