--- a/index3.html
+++ b/index3.html
@@ -26,8 +26,7 @@
 
         <h3>Contents</h3>
         <ul>
-            <li><a href=" sporting goods !</a></li>
-            <li><a href="#second-post">which pitching machine is the best for the throw!</a></li>
+            <li>which pitching machine is the best for the throw!</li>
         </ul>
         
         <h2 id="first-post">what is the best pitching machine for a Baseball player!</h2>
